# ITR

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
examples/: data_science_visualization.py  quick_start.py  sample_instructions.txt  sample_tools.json  test_examples.py  text_analysis_workflow.py
itr/: __init__.py  __version__.py
itr/assembly/: prompt_builder.py
itr/cli/: main.py
itr/core/: config.py  exceptions.py  logging.py  types.py
itr/indexing/: chunker.py  corpus.py  embedder.py  sparse_index.py
itr/retrieval/: dense_retriever.py  hybrid_retriever.py  sparse_retriever.py
itr/selection/: budget_selector.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_budget_selector.py  test_cli_basic.py  test_cli_simple.py  test_config.py  test_corpus.py  test_exceptions.py  test_itr_main.py  test_logging.py  test_prompt_builder.py  test_simple_coverage.py  test_types.py
